-- update - 2025.11.13

- feat: Centralized update script input validation for paths and configurations (security hardening)
- feat: Centralized update script lock file mechanism to prevent concurrent execution (cron-safe)
- feat: Centralized update script optional validate flag for faster updates (disabled by default)
- refactor: Centralized update script now uses SteamCMD native version checking (removed Steam API dependency)
- refactor: Centralized update script now uses Docker native commands for server restarts (removed Pterodactyl API dependency)
- remove: Centralized update script no longer requires curl, jq, or Pterodactyl API credentials (simpler setup)
- fix: Centralized update script nested command substitution causing corrupted version files and duplicate logs
- fix: Centralized update script argument list overflow from corrupted version file
- fix: Centralized update script argument list overflow when restarting many servers

-- update - 2025.11.12

- feat: Multi-framework support with independent boolean toggles per addon
- feat: Added ModSharp as standalone addon with .NET 9 runtime auto-installation
- feat: Migrated to SwiftlyS2 v2 (standalone, no MetaMod dependency)
- feat: Smart Docker image cleanup in build script (only removes replaced images)
- feat: Centralized gameinfo.gi management preserving all configured addons
- feat: MetaMod load order enforcement (always first after LowViolence)
- feat: SwiftlyS2 load order enforcement (always last before Game csgo for ModSharp compatibility)
- feat: ModSharp + SwiftlyS2 compatibility via automatic load order management
- feat: Added ALLOW_TOKENLESS hidden variable for RequireLoginForDedicatedServers patching
- refactor: Code restructure with centralized updater functions (~320 lines eliminated)
- refactor: Standardized logging and version management across all updaters
- upgrade: Enhanced addon selection with descriptive standalone options